@@ -1,3 +1,8 @@
+19 May 2009: dht-0.5
+
+  * Made reading of /dev/urandom a function provided by the user.
+  * Implemented the ``v'' extension that identifies node implementations.
+
 18 May 2009: dht-0.4
 
   * Fixed the handling of tokens in announce_peer messages.
